--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 ** PROJECT UNDER DEVELOPMENT, NOT YET USABLE **
 
-CLIP is a Co
+CLIP is a Command Line Interface music Player.
+
+CLIP does not use a text-base
